pegar tickets e fazer update

--- a/src/Login.css
+++ b/src/Login.css
@@ -1,7 +1,3 @@
-.btn-login{
-    background-color: #14213d;
-    color: white;
-}
 .form-login{
-    background-color: #8d99ae;
+    background-color: #dbdbdb;
 }
